@@ -203,8 +203,13 @@ end)
 let main () =
   let ppf = Format.err_formatter in
   let program = "ocaml" in
+  let display_deprecated_script_alert =
+    Array.length !argv >= 2 && Topcommon.is_command_like_name !argv.(1)
+  in
   Topcommon.update_search_path_from_env ();
   Compenv.readenv ppf Before_args;
+  if display_deprecated_script_alert then
+    Location.deprecated_script_alert program;
   Clflags.add_arguments __LOC__ Options.list;
   Compenv.parse_arguments ~current argv file_argument program;
   Compenv.readenv ppf Before_link;
